fixed spacing and removed hr css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,6 @@ body {
     font-size: 50px;
 }
 
-hr {
-    border-bottom: 1px solid white;
-}
-
 #gameText {
     font-size: 18px;
 }
